2013-12-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php: Fixed WMI 
	components form fails due to bad javascript code for incident #462

2013-12-17  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Add important attribute to 
	override jquery mobile style of last commit. Change home layout
	for widths greater than 800px (tablet devices)

2013-12-17  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Add a responsive design hack to
	mobile console to increase tables with to 100% in tablet devices

2013-12-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Added criticity subquery to
	events grouped query to fix bad criticity bug.
	Incident: #406

2013-12-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_gis.php: Disable more controls
	from the google maps in GIS to fix arrows controls

2013-12-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_gis.php
	include/javascript/openlayers.pandora.js
	include/styles/pandora.css: Remove our zoom in google maps
	on GIS view to use googles one. Incident #448

2013-12-13  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php, mobile/operation/modules.php,
	mobile/operation/agents.php: fixed the scroll of list for old
	browser in android mobiles devices.

2013-12-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Fixed wrong
	condition of minimum height of menu.
	Incident #417

2013-12-13  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js: Added auto scroll
	and resizable attributes to module graphs pop up
	to improve usability with zoomed graphs.
	Incident: #417

2013-12-12  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php
	include/graphs/flot/pandora.flot.js
	include/javascript/pandora.js
	include/styles/pandora.css